# fastapi-test

./: .env.example  .gitignore  database.py  main.py  pyproject.toml  requirements.txt
api/users/: users.py
api/v1/reports/: routes.py
api/v1/users/: routes.py
core/: config.py  security.py
core/services/reports/: crud.py
core/services/users/: auth.py  crud.py
database/: db.py
migrations/: env.py
migrations/versions/: 1d002cb6f769_update_table.py  376324acf9c2_update_models_and_fix_imports.py  8b06e19e409a_fix_all_table.py  ed4da66c4402_create_users_table.py
models/: __init__.py  categories.py  reports.py  users.py
models/users/: crud.py  hash.py  models.py
routers/: users.py
schemas/: reports.py  users.py
